apigate/tests/ui/fail/map_with_query.stderr
error: `map` requires `json = T` or `form = T`
  --> tests/ui/fail/map_with_query.rs:10:1
   |
10 | #[apigate::service(name = "sales", prefix = "/sales")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `apigate::service` (in Nightly builds, run with -Z macro-backtrace for more info)
